/*
 * @author Yanzhe Lee [lee.yanzhe@yanzhe.org]
 */
syntax = "proto3";
package com.hitnslab.dnssecurity.deeparcher.api.proto;
option java_package = "com.hitnslab.dnssecurity.deeparcher.api.proto.generated";
option java_outer_classname = "GraphAssocEdgeUpdateProto";
option optimize_for = SPEED;
option cc_enable_arenas = true;

message GraphAssocEdgeUpdate {
  string fqdn1 = 1;
  string fqdn2 = 2;
  int32 n_shared_fields = 3;
}
